# modern-cmake-basic-template

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: documentation.yml  macos.yml  pre-commit.yml  ubuntu-ci.yml  ubuntu.yml
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  CMakeLists.txt  Docs.cmake  Sanitizers.cmake  Tools.cmake  config.hpp.in
docs/: Doxyfile.in
inc/my_lib/: CMakeLists.txt  my_lib.h
src/my_lib/: CMakeLists.txt  my_lib.cc
tests/my_lib/: CMakeLists.txt  test_my_lib.cc
